# Integration_Calculator

./: CMakeLists.txt  CONTRIBUTING.md  DEVELOPER_DOCUMENTATION.md  README.md  USER_MANUAL.md  main.c  main.h
include/: integration.h  integration_text.h  menu_manager.h  menu_text.h  parser.h  text_data.h  text_utils.h  user_input.h
src/: integration.c  integration_text.c  menu_manager.c  menu_text.c  parser.c  text_utils.c  user_input.c
